--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/poppins": "^5.2.6",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
